# fw-nrfconnect-nrf

applications/serial_lte_modem/: prj.conf
applications/serial_lte_modem/doc/: SOCKET_AT_commands.rst  TCPIP_AT_commands.rst  slm_data_mode.rst
applications/serial_lte_modem/src/: main.c  slm_at_commands.c  slm_at_host.c  slm_at_host.h  slm_at_socket.c  slm_at_tcp_proxy.c  slm_at_tcpip.c  slm_at_udp_proxy.c  slm_util.c  slm_util.h
samples/nrf9160/eureka_lwm2m_proxy/: CMakeLists.txt  Kconfig  README.rst  prj.conf
samples/nrf9160/eureka_lwm2m_proxy/doc/: eureka_lwm2m_proxy spec.docx
samples/nrf9160/eureka_lwm2m_proxy/src/: elp_connect.c  elp_connect.h  elp_test.c  elp_test.h  elp_util.c  elp_util.h  main.c
samples/nrf9160/eureka_lwm2m_proxy/src/lwm2m/: CMakeLists.txt  Kconfig  elp_lwm2m_service.c  elp_lwm2m_service.h
samples/nrf9160/eureka_lwm2m_proxy/src/modem/: CMakeLists.txt  elp_modem_service.c  elp_modem_service.h
samples/nrf9160/eureka_zephyr/include/net/: lwm2m.h
samples/nrf9160/eureka_zephyr/subsys/net/lib/lwm2m/: Kconfig  (+4 more)
samples/nrf9160/ftp_speed_test/: CMakeLists.txt  prj.conf  sample.yaml
samples/nrf9160/ftp_speed_test/src/: main.c
samples/nrf9160/gps/: prj.conf
samples/nrf9160/gps/src/: main.c  supl_support.c
samples/nrf9160/nrfx/nrfx_timed_signal/: CMakeLists.txt  child_spm.conf  prj.conf
samples/nrf9160/nrfx/nrfx_timed_signal/src/: main.c
samples/nrf9160/nrfx/pdm/: Kconfig  child_spm.conf  prj.conf
samples/nrf9160/nrfx/pdm/src/: main.c
samples/nrf9160/nrfx/rtc/: child_spm.conf  prj.conf
samples/nrf9160/nrfx/rtc/src/: main.c
